Se configuraron los servicios para los DTO y se agrego parte de la seguridad

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,5 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto = create-drop
+app.jwt.secret = XR#sVCfSfKPj!mub%!S*bLntEb9Ft2
+app.jwt.expiration = 7200000
